user. For a history of changes in full detail, see our Mercurial repository
at http://hg.dillo.org/dillo


dillo-3.0.3 [not released yet]

+- Support for CSS display property
   Patch: Johannes Hofmann
+- Fix image input coordinates (BUG#1070)
 - When location bar is given focus, temporarily show panels if hidden
   (BUG#1093).
   Patches: corvid

-----------------------------------------------------------------------------

dillo-3.0.2 [December 05, 2011]

+- Digest authentication
   Patch: Justus Winter, corvid
+- text-transform property
 - If not following redirection, show body of redirecting page.
 - Middle click on stylesheet menu item opens in new tab/window.
 - Improve handling of combining characters.
 - Locale-independent ASCII character case handling (fixes Turkic locales).
   Patches: corvid
+- Rework line breaking and fix white-space:nowrap handling.
   Patch: Johannes Hofmann
+- Bind Ctrl-{PageUp,PageDown} to tab-{previous,next}.
   Patch: Jeremy Henty

-----------------------------------------------------------------------------

dillo-3.0.1 [September 21, 2011]

+- Add preference for UI theme.
 - Allow key bindings for paging left/right.
 - Privacy -- never send cookies when making third-party requests, and
   never accept cookies in the responses to these requests.
   Patches: corvid
+- Add show_quit_dialog dillorc option.
   Patch: Johannes Hofmann

-----------------------------------------------------------------------------

dillo-3.0 [September 06, 2011]

+- Ported Dillo to FLTK-1.3.
   Patch: corvid, Johannes Hofmann, Jorge Arellano Cid
+- Rewrote the User Interface: much simpler design and event handling.
 - Avoid double render after going Back or Forward (takes half the time now!).
 - Added on-the-fly panel resize (tiny/small/medium and normal/small icons).
 - Implemented a custom tabs handler (to allow fine control of it).
 - Rewrote dw's crossing-events dispatcher (avoids redundant events).