@@ -37,6 +37,7 @@ typedef enum {
    KEYS_FORWARD,
    KEYS_GOTO,
    KEYS_HOME,
+   KEYS_VIEW_SOURCE,
    KEYS_SCREEN_UP,
    KEYS_SCREEN_DOWN,
    KEYS_SCREEN_LEFT,
